@@ -39,6 +39,9 @@ Library
 - Issue #24134: assertRaises(), assertRaisesRegex(), assertWarns() and
   assertWarnsRegex() checks are not longer successful if the callable is None.
 
+- Issue #24018: Add a collections.Generator abstract base class.
+  Contributed by Stefan Behnel.
+
 - Issue #23880: Tkinter's getint() and getdouble() now support Tcl_Obj.
   Tkinter's getdouble() now supports any numbers (in particular int).
 
